practice/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: short-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: demo.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: api-clusterip
            port:
              number: 3000
